fixtures/cs-hash-02/good/type-only-bcrypt-import.ts
import type bcrypt from "bcrypt";

export const config = { cost: 12 };
